--- a/ckanext/amplus/fanstatic/less/_variables.less
+++ b/ckanext/amplus/fanstatic/less/_variables.less
@@ -7,6 +7,11 @@
 @text-dark:         #414141;
 @oval-bg:           #CFBEDC;
 
+@brand-light: #7A64A6;
+@brand-background: #efecf4;
+
+@gray-medium: #414141;
+
 @gray-medium: #414141;
 @gray-light: #E6E6E6;
 
@@ -14,7 +19,19 @@
 @silver:#9E9E9E;
 @black: #000000;
 
+@shadow-light: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+@shadow-brand: 0 0 10px 0 rgba(159, 26, 135, 0.2);
+
 @breakpoint-xl: ~'1200px';
 @breakpoint-lg: ~'1200px';
-@breakpoint-sm: ~'990px';
-@breakpoint-xs: ~'768px';
+@breakpoint-md: ~'1000px';
+@breakpoint-sm: ~'768px';
+@breakpoint-xs: ~'500px';
+
+@gutter-small: 1rem;
+@gutter-medium: @gutter-small * 1.5;
+@gutter-large: @gutter-small * 3;
+
+@gutter-list-item-small: 2rem;
+@gutter-list-item-medium: @gutter-list-item-small * 2;
+@gutter-list-item-large: @gutter-list-item-small * 3;
