--- a/ckanext/amplus/fanstatic/less/custom.less
+++ b/ckanext/amplus/fanstatic/less/custom.less
@@ -4,6 +4,7 @@
 
 @import "_variables.less";
 @import "_typography.less";
+@import "_mixins.less";
 
 @import "_nav.less";
 @import "_breadcrumb.less";
