--- a/ckanext/amplus/fanstatic/less/custom.less
+++ b/ckanext/amplus/fanstatic/less/custom.less
@@ -9,7 +9,7 @@
 @import "_fonts.less";
 @import "_buttons.less";
 
-@import "_search_form.less";
+@import "_forms.less";
 @import "_footer.less";
 @import "_insights.less";
 
