ckanext/amplus/fanstatic/less/_breadcrumb.less

--- a/ckanext/amplus/fanstatic/less/_breadcrumb.less
+++ b/ckanext/amplus/fanstatic/less/_breadcrumb.less
@@ -1,7 +1,7 @@
 // Add styles for active li and active a becouse in some cases there is not active class on li
 .toolbar{
   margin: 6rem 0 0 3rem;
-  & .breadcrumb {
+  .breadcrumb {
     >*:not(:first-child) {
       &:before {
         content: ">";
@@ -11,12 +11,12 @@
      li {
       color: @gray-medium;
       &.active {
-        &>a {
+        >a {
           color: @brand-primary;
           font-weight: 400;
         }
       }
-      & .active{
+      .active{
         color: @brand-primary;
         font-weight: 400;
       }
