Add variable for background-color

--- a/ckanext/amplus/fanstatic/less/_base.less
+++ b/ckanext/amplus/fanstatic/less/_base.less
@@ -18,7 +18,7 @@ body{
 }
 body [role=main]{
   padding: 0;
-  background-color: #efecf4;
+  background-color: @brand-background;
 }
 body [role=main] .secondary{
   background-color: #fff;
