--- a/ckanext/amplus/fanstatic/less/_breadcrumb.less
+++ b/ckanext/amplus/fanstatic/less/_breadcrumb.less
@@ -1,22 +1,30 @@
 // Add styles for active li and active a becouse in some cases there is not active class on li
-.toolbar{
-  margin: 6rem 0 0 3rem;
+.toolbar {
+  padding: 0;
+  margin-bottom: 0;
+
   .breadcrumb {
+    margin: 1rem 0;
+    font-size: inherit;
+
     >*:not(:first-child) {
       &:before {
         content: ">";
         color: @gray-medium;
       }
     }
-     li {
+
+    li {
       color: @gray-medium;
+
       &.active {
         >a {
           color: @brand-primary;
           font-weight: 400;
         }
       }
-      .active{
+
+      .active {
         color: @brand-primary;
         font-weight: 400;
       }
