Refactor page.html

--- a/ckanext/amplus/templates/page.html
+++ b/ckanext/amplus/templates/page.html
@@ -1,50 +1,37 @@
 {% ckan_extends %}
 
-{% block content %}
-{% block maintag %} {{ super() }} {% endblock %}
-<div id="content" class="container-fluid">
-  {% block main_content %}
-  {% block flash %}
-  {{ super() }}
-  {% endblock %}
-
-  <div class="row flex flex-align-streach flex-wrap {% if self.secondary()|trim == '' or c.action=='resource_read' %} no-nav{% endif %}">
-  
-    {% block pre_primary %}
-    {{ super() }}
-    {% endblock %}
-    <aside class="secondary col-md-3 col-sm-12 col-xs-12">
-        {% block secondary_content %}
-        {{ super() }}
+{%- block content %}
+  {% block maintag %}<div role="main">{% endblock %}
+    <div id="content" class="container-fluid">
+      {% block main_content %}
+        {% block flash %}
+          {{ super() }}
         {% endblock %}
-    </aside>
-    {% block secondary %}
-    
-   
-    {% endblock %}
 
-    {% block primary %}
-    <div class="primary col-md-9 col-sm-12 col-xs-12 bg-light">
-        <div class="breadcrumb-box">
-            {% block toolbar %}
+        {% block toolbar %}
+          {{ super() }}
+        {% endblock %}
+
+        <div class="row flex flex-wrap {% block wrapper_class %}{% endblock %}{% if self.secondary()|trim == '' or c.action=='resource_read' %} no-nav{% endif %}">
+          {#
+          The pre_primary block can be used to add content to before the
+          rendering of the main content columns of the page.
+          #}
+          {% block pre_primary %}
+          {% endblock %}
+
+          {% block secondary %}
             {{ super() }}
-            {% endblock %} 
-    
-          </div>
-      {% block primary_content %}
-       
-        {{ super() }}
+          {% endblock %}
+
+          {% block primary %}
+            {{ super() }}
+          {% endblock %}
+        </div>
       {% endblock %}
-
     </div>
-    {% endblock %}
-
   </div>
-  {% endblock %}
-
-</div>
-</div>
-{% endblock %}
+{% endblock -%}
 
 {% block footer %}
 <footer class="site-footer">
