--- a/ckanext/amplus/fanstatic/less/_base.less
+++ b/ckanext/amplus/fanstatic/less/_base.less
@@ -1,50 +1,56 @@
-*,
-*:after,
-*:before{
-    padding: 0;
-    margin: 0;
-    background-color: inherit;
-    font-family: inherit;
-}
-body{
-    font-family: Barlow;
-    background-color: @brand-primary;
-}
-.debug{
-    display: none;
-}
-.module-content{
+body {
+  font-family: 'Barlow', sans-serif;
+  background: @brand-primary;
+
+  &.main,
+  & [role=main] {
     background: @brand-background;
-}
-body [role=main]{
-  padding: 0;
-  background-color: @brand-background;
-}
-body [role=main] .secondary{
-  background-color: #fff;
+  }
+
+  & [role=main] {
+    min-height: auto;
+    padding: 0;
+  }
+
+  .primary {
+    background-color: transparent;
+  }
 }
 
-.form-control{
-    border-radius: 0;
-    border:none;
-    outline:none;
+.masthead {
+  .debug {
+    top: 0;
+    background: transparent;
+  }
 }
-.btn{
-    border-radius: 0;
-    border: none;
-    outline:none;
-}
-.editor .editor-info-block{
-    background-color: @brand-primary;
-    color: #fff;
-    font-weight: 600;
-    & a{
-        color: @brand-tertiary;
-        font-weight: 600;
-    }
-}
-.input-group-addon{
-    border: none;
-    border-radius: 0;
+
+.secondary {
+
+  &,
+  .module-content {
     background-color: #fff;
+  }
+
+  .module-heading {
+    background: @brand-background;
+  }
+
+}
+
+.form-control {
+  border-radius: 0;
+  border: none;
+  outline: none;
+}
+
+.btn {
+  border-radius: 0;
+  border: none;
+  outline: none;
+}
+
+.input-group-addon {
+  border: none;
+  border-radius: 0;
+  background-color: #fff;
 }
