--- a/ckanext/amplus/fanstatic/less/_responsive-sm.less
+++ b/ckanext/amplus/fanstatic/less/_responsive-sm.less
@@ -1,5 +1,8 @@
 @media only screen and (max-width: @breakpoint-sm) {
-    .homepage .insights {
-        padding: 100px 50px;
+  .homepage {
+    .insights {
+      padding: 100px 50px;
+
     }
+  }
 }
