Add padding for breadcrumb navigation in line with page content

--- a/ckanext/amplus/fanstatic/less/_breadcrumb.less
+++ b/ckanext/amplus/fanstatic/less/_breadcrumb.less
@@ -2,9 +2,8 @@
 .toolbar {
   padding: 0;
   margin-bottom: 0;
-
   .breadcrumb {
-    margin: 1rem 0;
+    margin: 1rem 1.5rem;
     font-size: inherit;
 
     >*:not(:first-child) {
@@ -30,4 +29,7 @@
       }
     }
   }
+}
+.toolbar .breadcrumb a {
+  color: @gray-medium;
 }
