Define darker brand color

--- a/ckanext/amplus/fanstatic/less/_variables.less
+++ b/ckanext/amplus/fanstatic/less/_variables.less
@@ -1,7 +1,8 @@
 @brand-primary:     #6033A7;
 @brand-secondary:   #9F1A86;
 @brand-tertiary:    #DE0064;
-@brand-quaternary: #7A64A6;
+@brand-quaternary:  #7A64A6;
+@brand-dark:        #4f2b8a;
 @brand-extra-light: #EBD3E6;
 @brand-background:  #EFECF4;
 @text-dark:         #414141;
