Update padding for navigation items

--- a/ckanext/amplus/fanstatic/less/_responsive-lg.less
+++ b/ckanext/amplus/fanstatic/less/_responsive-lg.less
@@ -25,9 +25,9 @@
   }
 
   .masthead .navigation .nav-pills.nav {
-    &>li {
-      & a {
-        padding: 2.2rem 1rem;
+    >li {
+      a {
+        padding: 2.2rem .8rem;
         font-size: 15px;
 
         & img {
