Increse padding on dropdown navigation

--- a/ckanext/amplus/fanstatic/less/_responsive-xs.less
+++ b/ckanext/amplus/fanstatic/less/_responsive-xs.less
@@ -2,4 +2,11 @@
     .footer-links div{
         padding: 20px 0px;
     }
+    .masthead .navigation .nav-pills.nav {
+        >li {
+          a {
+            padding: 2.2rem 2.5rem;
+          }
+        }
+    }
 }
