--- a/ckanext/amplus/fanstatic/less/_buttons.less
+++ b/ckanext/amplus/fanstatic/less/_buttons.less
@@ -1,32 +1,34 @@
-.btn-primary,
-.open > .dropdown-toggle.btn-primary {
-  background-color: @brand-primary;
-  border-radius: 0; 
-  &:hover,
-  &:active,
-  &:focus,
-  &:active:hover,
-  &.focus{
-    background-color: @brand-dark;
+.btn-primary {
+  .btn-primary-reset;
+}
+
+.open {
+  >.dropdown-toggle {
+    &.btn-primary {
+      .btn-primary-reset;
+    }
   }
 }
-.btn-search{
+
+.btn-search {
   background-color: @brand-primary;
-  padding: 1.4rem 0 ;
+  padding: 1.4rem 0;
   outline: none;
   border: none;
 }
-.btn-input-search{
+
+.btn-input-search {
   padding: 1.4rem;
   color: @white;
   background-color: @brand-primary;
   border: none;
-  outline:none;
+  outline: none;
 }
-.btn-default{
+
+.btn-default {
   border: none;
-  &:hover{
-    color: @white;
-    background-color: @brand-secondary;
+
+  &:hover {
+    background-color: darken(@white, 3%);
   }
 }
