--- a/ckanext/amplus/fanstatic/less/_variables.less
+++ b/ckanext/amplus/fanstatic/less/_variables.less
@@ -7,6 +7,7 @@
 @brand-background:  #EFECF4;
 @text-dark:         #414141;
 @oval-bg:           #CFBEDC;
+@brand-tertiary-light: #b50a57;
 
 @gray-medium: #414141;
 @gray-light: #E6E6E6;
