--- a/ckanext/amplus/fanstatic/css/custom.css
+++ b/ckanext/amplus/fanstatic/css/custom.css
@@ -265,7 +265,7 @@ a {
 }
 .module-content > .actions > .btn-danger:hover,
 .module-content > .content_action > .btn-danger:hover {
-  background-color: #f10e75;
+  background-color: #b50a57;
 }
 @font-face {
   font-family: 'Barlow';
