Added mixins for item leayout hover and negativ margin on wraping container

--- a/ckanext/amplus/fanstatic/less/_mixins.less
+++ b/ckanext/amplus/fanstatic/less/_mixins.less
@@ -10,3 +10,19 @@
     background-color: @brand-dark;
   }
 }
+.hover-box{
+  border-radius: 0;
+  box-shadow: @shadow-brand;
+  border: 1px solid @brand-secondary;
+}
+.content-margin-fix{
+  margin-left: -@gutter-medium;
+  margin-right: -@gutter-medium;
+}
+.content-item-layout{
+  width: calc(50% - @gutter-large );
+  margin: @gutter-medium;
+  padding: @gutter-list-item-medium @gutter-list-item-small @gutter-list-item-medium @gutter-list-item-medium;
+  border-radius: 0;
+  box-shadow: @shadow-light;
+}
