Add resource item responsive style

--- a/ckanext/amplus/fanstatic/less/_responsive-lg.less
+++ b/ckanext/amplus/fanstatic/less/_responsive-lg.less
@@ -72,7 +72,8 @@
       }
     }
   }
-  .media-grid .media-item{
+  .media-grid .media-item,
+  .resource-list .resource-item{
     width: calc(100% - @gutter-small*2);
   }
 }
