--- a/ckanext/amplus/fanstatic/less/_variables.less
+++ b/ckanext/amplus/fanstatic/less/_variables.less
@@ -15,9 +15,8 @@
 @brand-background: #efecf4;
 
 @gray-medium: #414141;
-
-@gray-medium: #414141;
 @gray-light: #E6E6E6;
+@gray-extra-light: #E6E6E6;
 
 @white: #FFFFFF;
 @silver:#9E9E9E;
