--- a/ckanext/amplus/fanstatic/less/custom.less
+++ b/ckanext/amplus/fanstatic/less/custom.less
@@ -17,6 +17,7 @@
 @import "_resource_item.less";
 @import "_fonts.less";
 @import "_buttons.less";
+@import "_facet_list.less";
 
 @import "_forms.less";
 @import "_footer.less";
