Add white backgraond on more specific inputs

--- a/ckanext/amplus/fanstatic/less/_typography.less
+++ b/ckanext/amplus/fanstatic/less/_typography.less
@@ -2,7 +2,9 @@
   font-size: 24px;
   padding-left: .5rem;
 }
-.form-control{
+.form-control,
+.controls .form-control{
+  background-color: @white;
   border: none;
   border-radius: 0;
   outline:none;
