--- a/ckanext/amplus/fanstatic/less/_data.less
+++ b/ckanext/amplus/fanstatic/less/_data.less
@@ -11,20 +11,20 @@
         background: @white;
         box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
     }
-    & .dataset-content {
+    .dataset-content {
         > div {
             font-size: 14px;
             font-weight: 400;
             line-height: 17px;
             color: @text-dark;
         }
-        & .dataset-heading a {
+        .dataset-heading a {
             font-size: 21px;
             font-weight: 600;
             color: @brand-secondary;
         }
     }
-    & .dataset-resources li .label {
+    .dataset-resources li .label {
         background: transparent;
         color: @silver;
         border: 1px solid @silver;
