Remove & from CSS selector

--- a/ckanext/amplus/fanstatic/less/_responsive-lg.less
+++ b/ckanext/amplus/fanstatic/less/_responsive-lg.less
@@ -36,7 +36,7 @@
           padding: 2.2rem .8rem;
           font-size: 15px;
 
-          & img {
+          img {
             max-width: 18px;
             max-height: 18px;
           }
