Refactor layout1.html and replace uppercase titles

--- a/ckanext/amplus/templates/home/layout1.html
+++ b/ckanext/amplus/templates/home/layout1.html
@@ -36,22 +36,22 @@
       <div class="group-container">
         <p class="group-heading">{{_("Discover your data")}}</p>
         <div class="container-fluid">
-          <div class="row text-center">
-              <div class="toggle-section">
+          <div class="row">
+              <div class="toggle-section text-center">
                 <ul class="nav nav-tabs">
                   <li class="col-md-4 col-sm-4 col-xs-4">
                     <a class="toggle-view" href="#data" data-toggle="tab">
-                        <p>{{_("DATA")}}</p>
+                        <p>{{_("Data")}}</p>
                     </a>
                   </li>
                   <li class="active col-md-4 col-sm-4 col-xs-4">
                     <a class="toggle-view" href="#visualize" data-toggle="tab">
-                        <p>{{_("VISUALIZE")}}</p>
+                        <p>{{_("Visualize")}}</p>
                     </a>
                   </li>
                   <li class="col-md-4 col-sm-4 col-xs-4">
                     <a class="toggle-view" href="#locate" data-toggle="tab">
-                        <p>{{_("LOCATE")}}</p>
+                        <p>{{_("Locate")}}</p>
                     </a>
                   </li>
 
