--- a/ckanext/amplus/fanstatic/less/_insights.less
+++ b/ckanext/amplus/fanstatic/less/_insights.less
@@ -20,7 +20,7 @@ body {
     }
 
     .box {
-        box-shadow: 0 0 30px 0 fade(#000, 10%);
+        box-shadow: 0 0 30px 0 fade(@black, 10%);
         margin: 60px 0px;
         border: none;
         transition: .3s;
