Refactor LESS assets

--- a/ckanext/amplus/fanstatic/less/_base.less
+++ b/ckanext/amplus/fanstatic/less/_base.less
@@ -1,50 +1,66 @@
 body {
   font-family: 'Barlow', sans-serif;
+
   .main,
   & [role=main] {
     background: @brand-background;
-    & .secondary{
-        padding-right: 0;
+
+    & .secondary {
+      padding-right: 0;
     }
   }
+
   & [role=main] {
     min-height: auto;
     padding: 0;
   }
+
   .primary {
     background-color: transparent;
   }
 }
+
 .masthead {
   .debug {
     top: 0;
     background: transparent;
   }
 }
+
 .secondary {
+
   &,
   .module-content {
-    background-color: #fff;
+    background-color: @white;
   }
+
   .module-heading {
     background: @brand-background;
   }
 }
+
 .form-control {
   border-radius: 0;
   border: none;
   outline: none;
 }
+
 .btn {
   border-radius: 0;
   border: none;
   outline: none;
 }
+
 .input-group-addon {
   border: none;
   border-radius: 0;
-  background-color: #fff;
+  background-color: @white;
 }
-a{
-    color: @brand-primary;
+
+a {
+  color: @brand-primary;
+}
+
+.module-resource {
+  flex-basis: 100%;
 }
