--- a/ckanext/amplus/fanstatic/less/_forms.less
+++ b/ckanext/amplus/fanstatic/less/_forms.less
@@ -52,7 +52,7 @@
         position: absolute;
         right: 16px;
         border-style: solid;
-        background: #fff;
+        background: @white;
         border-color: transparent @gray-medium;
         pointer-events: none;
         transform: rotate(90deg)
@@ -73,7 +73,7 @@
       select {
         height: 46px;
         box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
-        padding-right: 4rem; 
+        padding-right: 4rem;
         -webkit-appearance: none;
         -moz-appearance: none;
         appearance: none;
