--- a/ckanext/amplus/fanstatic/less/_navigation_tabs.less
+++ b/ckanext/amplus/fanstatic/less/_navigation_tabs.less
@@ -9,21 +9,21 @@
     >li {
       margin-right: 1rem;
       &.active {
-        background: #fff;
+        background: @white;
         >a {
           color: @brand-primary;
           border: none;
-          background: #fff;
+          background: @white;
           font-weight: 700;
           &:hover {
-            color: #fff;
+            color: @white;
             background-color: @brand-quaternary;
           }
         }
       }
       >a {
         background-color: @brand-primary;
-        color: #fff;
+        color: @white;
         border-radius: 0;
         font-weight: 700;
         &:hover {
@@ -36,11 +36,11 @@
       .badge {
         background-color: @brand-primary;
       }
-    } 
+    }
   }
   &>a {
     background-color: @brand-primary;
-    color: #fff;
+    color: @white;
     border-radius: 0;
     &:hover {
       background-color: @brand-dark;
@@ -51,15 +51,15 @@
   >.actions,
   >.content_action {
     >.btn {
-      color: #000;
-      background-color: #fff;
+      color: @black;
+      background-color: @white;
       &:hover {
         background-color: darken(@white, 3%);
-       
+
       }
     }
     >.btn-danger {
-      color: #fff;
+      color: @white;
       background-color: @brand-tertiary;
       &:hover {
         background-color: @brand-tertiary-light;
