--- a/ckanext/amplus/fanstatic/less/_mixins.less
+++ b/ckanext/amplus/fanstatic/less/_mixins.less
@@ -10,3 +10,11 @@
     background-color: @brand-dark;
   }
 }
+
+.btn-default-reset {
+  border: none;
+
+  &:hover {
+    background-color: darken(@white, 3%);
+  }
+}
