--- a/ckanext/amplus/fanstatic/less/_base.less
+++ b/ckanext/amplus/fanstatic/less/_base.less
@@ -45,12 +45,6 @@ body {
   outline: none;
 }
 
-.btn {
-  border-radius: 0;
-  border: none;
-  outline: none;
-}
-
 .input-group-addon {
   border: none;
   border-radius: 0;
@@ -63,4 +57,9 @@ a {
 
 .module-resource {
   flex-basis: 100%;
+}
+
+.page-header {
+  background-color: inherit;
+  border-bottom: none;
 }
