--- a/ckanext/amplus/fanstatic/less/_buttons.less
+++ b/ckanext/amplus/fanstatic/less/_buttons.less
@@ -1,3 +1,10 @@
+.btn {
+  border-radius: 0;
+  border: none;
+  outline: none;
+  font-weight: inherit;
+}
+
 .btn-primary {
   .btn-primary-reset;
 }
