--- a/ckanext/amplus/fanstatic/less/custom.less
+++ b/ckanext/amplus/fanstatic/less/custom.less
@@ -14,9 +14,9 @@
 @import "_nav.less";
 @import "_flex.less";
 @import "_breadcrumb.less";
-@import "_navigation_tabs.less";
-@import "_list_item.less";
-@import "_resource_item.less";
+@import "_navigation-tabs.less";
+@import "_list-item.less";
+@import "_resource-item.less";
 @import "_fonts.less";
 @import "_buttons.less";
 
