--- a/ckanext/amplus/templates/home/layout1.html
+++ b/ckanext/amplus/templates/home/layout1.html
@@ -1,15 +1,7 @@
-<div role="main" class="hero">
-        <div class="container">
-          <div class="row row1">
-            <div class="col-md-6 col1">
-              {% block search %}
-                {% snippet 'home/snippets/search.html' %}
-              {% endblock %}
-              {% block stats %}
-                {% snippet 'home/snippets/stats.html' %}
-              {% endblock %}
-            </div>
-            <div class="col-md-6 col2">
+      <div class="hero text-center">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-8 col-md-offset-2">
               {% block promoted %}
                 {% snippet 'home/snippets/promoted.html' %}
               {% endblock %}
@@ -17,22 +9,22 @@
           </div>
         </div>
       </div>
-      <div role="main">
-        <div class="container">
-          <div class="row row2">
-            <div class="col-md-6 col2">
-              {% block featured_organization %}
-                {% snippet 'home/snippets/featured_organization.html' %}
-              {% endblock %}
+
+      <div class="group-topics">
+        <p class="group-heading">{{_("Explore Topics")}}</p>
+        <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="row">
+                  {% block featured_group %}
+                    {% snippet 'home/snippets/custom_featured_group.html' %}
+                  {% endblock %}
+                </div> 
+              </div>
             </div>
-            <div class="col-md-6 col1">
-              {% block featured_group %}
-                {% snippet 'home/snippets/featured_group.html' %}
-              {% endblock %}
-            </div>
-          </div>
         </div>
       </div>
+
       <div class="group-container">
         <p class="group-heading">{{_("Discover your data")}}</p>
         <div class="container-fluid">
