--- a/ckanext/amplus/templates/home/snippets/custom_featured_group.html
+++ b/ckanext/amplus/templates/home/snippets/custom_featured_group.html
@@ -1,7 +1,7 @@
 {% set groups = h.get_featured_groups(10) %}
 
 {% for group in groups %}
-    <div class="col-lg-3">
+    <div class="col-lg-3 col-md-6">
         {% snippet 'snippets/custom_group_item.html', group=group, truncate=50, truncate_title=35 %}
     </div>
     
