Add responsive assets for the categories section

--- a/ckanext/amplus/fanstatic/less/_responsive-sm.less
+++ b/ckanext/amplus/fanstatic/less/_responsive-sm.less
@@ -2,16 +2,12 @@
     .footer-links div{
         padding: 20px 0px;
     }
-    .homepage .group-container {
-        padding: 100px 10px;
-    }
-    .homepage .insights {
-        padding: 100px 50px;
-    }
     .homepage {
+        .group-container {
+            padding: 100px 10px;
+        }
         .insights {
-        padding: 100px 50px;
-
+            padding: 100px 50px;
         }
     }
     .navbar-toggle{
